--- a/src/task1/View.fxml
+++ b/src/task1/View.fxml
@@ -14,7 +14,7 @@
          <font>
             <Font size="15.0" />
          </font></Label>
-      <Button fx:id="addButton" disable="true" layoutX="334.0" layoutY="56.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="101.0" text="Add banknotes" />
+      <Button fx:id="addButton" disable="true" layoutX="334.0" layoutY="56.0" mnemonicParsing="false" onAction="#addBanknotes" prefHeight="32.0" prefWidth="101.0" text="Add banknotes" />
       <Label layoutX="153.0" layoutY="98.0" text="Value of banknote">
          <font>
             <Font size="15.0" />
@@ -28,7 +28,7 @@
       </Label>
       <TextField fx:id="amountField" layoutX="153.0" layoutY="172.0" />
       <Button fx:id="getButton" layoutX="334.0" layoutY="109.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="101.0" text="Get money" />
-      <Label layoutX="450.0" layoutY="56.0" prefHeight="32.0" prefWidth="131.0" text="NOT VALID INPUT" textFill="RED" visible="false">
+      <Label fx:id="exceptionLabel" layoutX="450.0" layoutY="56.0" prefHeight="32.0" prefWidth="167.0" text="NOT VALID INPUT" textFill="RED" visible="false">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -37,9 +37,9 @@
       <Label layoutX="450.0" layoutY="133.0" prefHeight="17.0" prefWidth="47.0" text="Amount:" visible="false" />
       <Label fx:id="valueGet" layoutX="502.0" layoutY="101.0" text="00" visible="false" />
       <Label fx:id="amountGet" layoutX="502.0" layoutY="133.0" text="0" visible="false" />
-      <Label fx:id="availableMoney" alignment="TOP_LEFT" layoutX="14.0" layoutY="47.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="229.0" prefWidth="131.0" wrapText="true">
+      <Label fx:id="availableMoney" alignment="TOP_LEFT" layoutX="14.0" layoutY="47.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="229.0" prefWidth="131.0" textFill="#5ac94b" wrapText="true">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
       <CheckBox layoutX="281.0" layoutY="101.0" mnemonicParsing="false" onAction="#switchButtons" />
