--- a/src/task1/View.fxml
+++ b/src/task1/View.fxml
@@ -21,13 +21,13 @@
       </font>
    </Label>
    <TextField fx:id="valueField" disable="true" layoutX="153.0" layoutY="119.0" />
-   <Label layoutX="153.0" layoutY="151.0" text="Amount">
+   <Label fx:id="amountLabel" layoutX="153.0" layoutY="151.0" text="Money">
       <font>
          <Font size="15.0" />
       </font>
    </Label>
    <TextField fx:id="amountField" layoutX="153.0" layoutY="172.0" />
-   <Button fx:id="getButton" layoutX="334.0" layoutY="109.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="101.0" text="Get money" />
+   <Button fx:id="getButton" layoutX="334.0" layoutY="109.0" mnemonicParsing="false" onAction="#getBanknotes" prefHeight="32.0" prefWidth="101.0" text="Get money" />
    <Label fx:id="exceptionLabel" layoutX="450.0" layoutY="56.0" prefHeight="32.0" prefWidth="167.0" text="NOT VALID INPUT" textFill="RED" visible="false">
       <font>
          <Font name="System Bold" size="12.0" />
