--- a/src/task1/View.fxml
+++ b/src/task1/View.fxml
@@ -14,32 +14,36 @@
          <Font size="15.0" />
       </font>
    </Label>
-   <Button fx:id="addButton" disable="true" layoutX="334.0" layoutY="56.0" mnemonicParsing="false" onAction="#addBanknotes" prefHeight="32.0" prefWidth="101.0" text="Add banknotes" />
+   <Button fx:id="addButton" layoutX="334.0" layoutY="56.0" mnemonicParsing="false" onAction="#addBanknotes" prefHeight="32.0" prefWidth="101.0" text="Add banknotes" />
    <Label layoutX="153.0" layoutY="98.0" text="Value of banknote">
       <font>
          <Font size="15.0" />
       </font>
    </Label>
-   <TextField fx:id="valueField" disable="true" layoutX="153.0" layoutY="119.0" />
-   <Label fx:id="amountLabel" layoutX="153.0" layoutY="151.0" text="Money">
+   <TextField fx:id="valueField" layoutX="153.0" layoutY="119.0" />
+   <Label fx:id="amountLabel" layoutX="153.0" layoutY="151.0" text="Amount">
       <font>
          <Font size="15.0" />
       </font>
    </Label>
    <TextField fx:id="amountField" layoutX="153.0" layoutY="172.0" />
-   <Button fx:id="getButton" layoutX="334.0" layoutY="109.0" mnemonicParsing="false" onAction="#getBanknotes" prefHeight="32.0" prefWidth="101.0" text="Get money" />
+   <Button fx:id="getButton" disable="true" layoutX="334.0" layoutY="109.0" mnemonicParsing="false" onAction="#getBanknotes" prefHeight="32.0" prefWidth="101.0" text="Get money" />
    <Label fx:id="exceptionLabel" layoutX="450.0" layoutY="56.0" prefHeight="32.0" prefWidth="167.0" text="NOT VALID INPUT" textFill="RED" visible="false">
       <font>
          <Font name="System Bold" size="12.0" />
       </font>
    </Label>
-   <Label layoutX="450.0" layoutY="101.0" prefHeight="17.0" prefWidth="35.0" text="Value:" visible="false" />
-   <Label layoutX="450.0" layoutY="133.0" prefHeight="17.0" prefWidth="47.0" text="Amount:" visible="false" />
+   <Label fx:id="valueGetLabel" layoutX="450.0" layoutY="101.0" prefHeight="17.0" prefWidth="35.0" text="Value:" visible="false" />
+   <Label fx:id="amountGetLabel" layoutX="450.0" layoutY="133.0" prefHeight="17.0" prefWidth="47.0" text="Amount:" visible="false" />
    <Label fx:id="valueGet" layoutX="502.0" layoutY="101.0" text="00" visible="false" />
    <Label fx:id="amountGet" layoutX="502.0" layoutY="133.0" text="0" visible="false" />
    <Label fx:id="availableMoney" alignment="TOP_LEFT" layoutX="14.0" layoutY="47.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="229.0" prefWidth="131.0" textFill="#5ac94b" wrapText="true">
       <font>
          <Font name="System Bold" size="14.0" />
       </font></Label>
-   <CheckBox layoutX="281.0" layoutY="101.0" mnemonicParsing="false" onAction="#switchButtons" />
+   <CheckBox layoutX="281.0" layoutY="101.0" mnemonicParsing="false" onAction="#switchButtons" selected="true" />
+   <Label fx:id="moneyExceptionLabel" layoutX="320.0" layoutY="175.0" text="NOT ENOUGH MONEY IN THE ATM" textFill="RED" visible="false">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font></Label>
 </Pane>
